# locale-translate

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: helper_functions.rs  interact.rs  main.rs  types.rs
