[package]
name = "locale-translate"
version = "0.2.1"
edition = "2024"
description = "A basic utility for parsing locale files and translating them to a given target language using DeepL."
license = "MIT OR Apache-2.0"
repository = "https://github.com/lthoerner/locale-translate"

[dependencies]
deepl-api = "0.4.3"
dialoguer = { version = "0.12.0", features = ["fuzzy-select"] }
serde = "1.0.228"
serde_json = "1.0.145"
soft-canonicalize = "0.4.5"
toml = "0.9.8"
