[package]
name = "ltranslate"
version = "0.3.2"
edition = "2024"
description = "A utility for automating locale file translation using DeepL."
license = "MIT OR Apache-2.0"
repository = "https://github.com/lthoerner/ltranslate"

[dependencies]
clap = "4.5.50"
deepl-api = "0.4.3"
dialoguer = { version = "0.12.0", features = ["fuzzy-select"] }
serde = "1.0.228"
serde_json = { version = "1.0.145", features = ["preserve_order"] }
soft-canonicalize = "0.4.5"
toml = "0.9.8"
